# ThinkMark

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  auto_question.py  config.json  example_config.yaml  mcp_test.py  plan.md  pyproject.toml  run_mcp.py  spec.md  test_reader.py  test_scrape.py  test_show_chunks.py  test_timeout.py  thinkmark_mcp.py
.github/workflows/: publish.yml
<typer.models.OptionInfo object at 0x7f9cdb8ed400>/: manifest.json
<typer.models.OptionInfo object at 0x7fdc161dd4f0>/: manifest.json
annotate_pkg/: .env.example  README.md  pyproject.toml
annotate_pkg/src/annotate_pkg/: client.py  demo_summarize_md.py  loader.py
docs/: DEVELOPMENT.md  PUBLISHING.md
docs-llm-pkg/: llms.txt  manifest.json
docs_llm_scraper/: __init__.py  agent.py  cli.py  commands.py  crawler.py  processing.py  timeout_utils.py  utils.py
docs_llm_scraper/chunker/: markdown_chunker.py
docs_llm_scraper/cleaner/: html_cleaner.py
docs_llm_scraper/commands/: __init__.py  chat.py  main.py
docs_llm_scraper/docs-llm-pkg/: llms.txt  manifest.json
docs_llm_scraper/exporter/: package_exporter.py
docs_llm_scraper/llama_agent/: __init__.py  agent.py  client.py  ingestion.py  utils.py
docs_llm_scraper/logs/: bad_urls.txt
docs_llm_scraper/spiders/: docs_spider.py  link_filters.py
llm-doc-processor/: pyproject.toml  readme.md
llm-doc-processor/src/llm_doc_processor/: __main__.py  deduplicator.py  html_cleaner.py  mapper.py
logs/: bad_urls.txt
markify_pkg/: pyproject.toml  readme.md
markify_pkg/src/markify_pkg/: __main__.py  deduplicator.py  markdown_converter.py  processor.py
output/: manifest.yaml
output/markdown/: llama-stack-readthedocs-io-en-latest.md
scrape_pkg/: README.md  config.json  pyproject.toml
scrape_pkg/src/scrape_pkg/: __init__.py  cli.py  config.py  emit_llms.py  hierarchy.py  items.py  link_filters.py  settings.py  url_utils.py
scrape_pkg/src/scrape_pkg/pipelines/: hiearchy.py  html_saver.py
scrape_pkg/src/scrape_pkg/spiders/: docs.py
scripts/: benchmark_markify_memory.py
src/thinkmark/: __init__.py  __main__.py  cli.py  cli.py.bak
src/thinkmark/annotate/: __init__.py  adapter.py  cli.py  client.py  manifest.py
src/thinkmark/core/: __init__.py  models.py  pipeline.py
src/thinkmark/markify/: __init__.py  adapter.py  cli.py  deduplicator.py  html_cleaner.py  mapper.py  markdown_converter.py  processor.py
src/thinkmark/mcp/: __init__.py  claude_cli.py  cli.py  fast_cli.py  fast_cli_sync.py  fast_server.py  fast_server_sync.py  server.py
src/thinkmark/mcp/tools/: __init__.py  annotate.py  discovery.py  markify.py  pipeline.py  scrape.py  vector.py
src/thinkmark/scrape/: __init__.py  adapter.py  cli.py  crawler.py  hierarchy.py  items.py  link_filters.py
src/thinkmark/scrape/pipelines/: __init__.py  hierarchy.py  html_saver.py
src/thinkmark/scrape/spiders/: __init__.py  docs.py
src/thinkmark/utils/: __init__.py  config.py  config_manager.py  json_io.py  logging.py  paths.py  url.py
src/thinkmark/vector/: __init__.py  adapter.py  chunker.py  chunking_strategies.py  cli.py  content_detection.py  hybrid_search.py  metadata_enrichment.py  processor.py
tests/: __init__.py  conftest.py  test_integration.py
tests/core/: test_models.py  test_pipeline_markify_stage.py
tests/fixtures/site/: getting-started.html  index.html
tests/fixtures/site/api/: index.html
tests/test_chunker/: test_markdown_chunker.py
tests/test_cleaner/: test_html_cleaner.py
tests/test_exporter/: test_package_exporter.py
tests/test_llama_agent/: __init__.py  test_vector_io.py
tests/utils/: test_url.py
