[tool.poetry]
name = "thinkmark"
version = "0.2.0"
description = "Documentation to LLM pipeline (scrape, convert, annotate)"
authors = ["ThinkMark Team"]
readme = "README.md"
packages = [{include = "thinkmark", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# Scraping dependencies
scrapy = "^2.11"
python-slugify = "^8.0"
# Markdown conversion dependencies
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
html2text = "^2024.2.26"
jsonlines = "^4.0.0"
tqdm = "^4.66.2"
scikit-learn = "^1.6.1"
numpy = "^1.26.4"
# Annotation dependencies
openrouter = "^1.0"
openai = "^1.75.0"
# Shared dependencies
typer = "^0.15.2"
rich = "^13.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.1.3"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
thinkmark = "thinkmark.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"
