[project]
name = "annotate-pkg"
version = "0.1.0"
description = "(experimental) LLM annotations to augment scraped stuff"
authors = [
    {name = "Phillip",email = "thephilliplin@gmail.com"}
]
packages = [{ include = "annotate_pkg", from = "src" }]



readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openrouter (>=1.0,<2.0)",
    "openai (>=1.75.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
