[tool.poetry]
name = "markify-pkg"
version = "0.1.0"
description = "Process HTML documentation into LLM-friendly Markdown"
authors = ["Your Name <your.email@example.com>"]

packages = [
    { include = "markify_pkg", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
html2text = "^2024.2.26"
jsonlines = "^4.0.0"
tqdm = "^4.66.2"
scikit-learn = "^1.6.1"
numpy = "^1.26.4"
typer = "^0.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
markify-pkg = "markify_pkg.__main__:main"